[package]
name = "tcp-rust"
version = "0.1.0"
authors = ["Luis Jesus Diaz Manzo <luis@drconopoima.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "tcp_rust"
# path = "src/lib.rs"

[[bin]]
name = "tcp_rust"
path = "src/main.rs"

[dependencies]
tun-tap = "~0.1.2"
