[package]
name = "tcp-rust"
version = "0.1.0"
authors = ["Luis Jesus Diaz Manzo <luis@drconopoima.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tcp-rust"
path = "src/main.rs"

[dependencies]
etherparse = "~0.9.0"
tun-tap = "~0.1.2"
